Fixed OPTIONS endpoint for results
